@@ -18,3 +18,4 @@ test_mng.$o:		CPPFLAGS += -DSTXXL_VERBOSE_LEVEL=2
 test_mng1.$o:		CPPFLAGS += -DSTXXL_VERBOSE_LEVEL=2
 test_write_pool.$o:	CPPFLAGS += -DSTXXL_VERBOSE_LEVEL=2
 test_prefetch_pool.$o:	CPPFLAGS += -DSTXXL_VERBOSE_LEVEL=2
+test_mng_recursive_alloc.$o:	CPPFLAGS += -DSTXXL_VERBOSE_LEVEL=3
